[package]
name = "inputsynth"
description = "X11 input synthesis"
authors = [ "Yuxuan Shui" ]
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/yshui/inputsynth"
repository = "https://github.com/yshui/inputsynth"

[dependencies]
thiserror = "1.0.30"
x11rb = { version = "0.11.1", features = ["xtest", "xkb", "allow-unsafe-code", "xinput"] }
xkbcommon = { version = "0.5.0", features = [ "x11" ] }
